- updated login form

--- a/src/resources/stylus/login-page.styl
+++ b/src/resources/stylus/login-page.styl
@@ -1,7 +1,71 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
-.login-page {
-  width: 360px;
-  padding: 8% 0 0;
-  margin: auto;
+wrapper_color = green
+
+background_linear_gradien(base_color, second_color) {
+  background: base_color
+  background: -webkit-linear-gradient(right, base_color, second_color)
+  background: -moz-linear-gradient(right, base_color, second_color)
+  background: -o-linear-gradient(right, base_color, second_color)
+  background: linear-gradient(to left, base_color, second_color)  
 }
+
+.login-wrapper
+  background: wrapper_color
+  width: 100%
+  min-height: 100vh
+  background_linear_gradien(#50a3a2, #50a3a2)
+  font-family: "Roboto", sans-serif
+
+.login-page
+  width: 360px
+  padding: 8% 0 0;
+  margin: auto
+
+.login-form-wrapper
+  background: white
+  position: relative
+  z-index: 1
+  max-width:360px
+  margin: 0 auto 0px
+  padding: 45px
+  text-align: center
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24)
+
+form
+  input
+    font-family: "Roboto", sans-serif
+    outline: 0
+    background: #f2f2f2
+    width: 100%
+    border: 0
+    margin: 0 0 15px
+    padding: 15px
+    box-sizing: border-box
+    font-size: 14px
+  button
+    font-family: "Roboto", sans-serif
+    text-transform: uppercase
+    outline: 0
+    background: #4CAF50
+    width: 100%
+    border: 0
+    padding: 15px
+    color: #FFFFFF
+    font-size: 14px
+    -webkit-transition: all 0.3 ease
+    transition: all 0.3 ease
+    cursor: pointer
+
+.little-message
+  margin: 15px 0 0
+  color: #b3b3b3
+  font-size: 12px
+  a
+    color: #4CAF50
+    text-decoration: none
+
+.form button:hover,
+.form button:active,
+.form button:focus 
+  background: #43A047;
