--- a/src/resources/stylus/login-page.styl
+++ b/src/resources/stylus/login-page.styl
@@ -16,6 +16,8 @@ background_linear_gradien(base_color, second_color) {
   min-height: 100vh
   background_linear_gradien(#50a3a2, #50a3a2)
   font-family: "Roboto", sans-serif
+  position: absolute;
+  overflow: hidden;
 
 .login-page
   width: 360px
