--- a/src/resources/stylus/bubbles-bg.styl
+++ b/src/resources/stylus/bubbles-bg.styl
@@ -1,9 +1,9 @@
 .bg-bubbles {
   position: absolute;
-  top: 0;
+  top: -10vh;
   left: 0;
-  width: 00%;
-  height: 0%;
+  width:100%;
+  height:110vh
   z-index: 1;
 }
 .bg-bubbles li {
@@ -18,10 +18,6 @@
   animation: square 25s infinite;
   -webkit-transition-timing-function: linear;
   transition-timing-function: linear;
-}
-
-.bg-bubbles li {
-    border-radius: 25%;
 }
 
 .bg-bubbles li:nth-child(1) {
@@ -93,23 +89,25 @@
   -webkit-animation-delay: 11s;
           animation-delay: 11s;
 }
+
 @-webkit-keyframes square {
   0% {
     -webkit-transform: translateY(0);
             transform: translateY(0);
   }
   100% {
-    -webkit-transform: translateY(-700px) rotate(600deg);
-            transform: translateY(-700px) rotate(600deg);
+    -webkit-transform: translateY(-130vh) rotate(600deg);
+            transform: translateY(-130vh) rotate(600deg);
   }
 }
+
 @keyframes square {
   0% {
     -webkit-transform: translateY(0);
             transform: translateY(0);
   }
   100% {
-    -webkit-transform: translateY(-700px) rotate(600deg);
-            transform: translateY(-700px) rotate(600deg);
+    -webkit-transform: translateY(-130vh) rotate(600deg);
+            transform: translateY(-130vh) rotate(600deg);
   }
 }
