- added canvas for learning ig

--- a/src/resources/stylus/login-page.styl
+++ b/src/resources/stylus/login-page.styl
@@ -33,7 +33,6 @@ background_linear_gradien(base_color, second_color) {
   padding: 45px
   text-align: center
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24)
-
 form
   input
     font-family: "Roboto", sans-serif
@@ -71,3 +70,11 @@ form
 .form button:active,
 .form button:focus 
   background: #43A047;
+
+.login-page 
+  position: relative
+  z-index: 2
+
+form 
+   transition: all 2000ms ease-in
+   overflow: hidden
